--- a/src/sass/module/block/_table.scss
+++ b/src/sass/module/block/_table.scss
@@ -3,7 +3,7 @@
 // テーブル（順位表）
 .table {
   width: 100%;
-  margin-top: 28px;
+  min-width: 550px;
   table-layout: fixed;
   border-spacing: 0;
 
@@ -14,6 +14,10 @@
     color: global.$color-BK;
     text-align: center;
     border-bottom: 1px solid global.$color-GR;
+
+    @include global.mq(tb) {
+      font-size: 13px;
+    }
   }
 
   td:last-child {
@@ -27,20 +31,37 @@
     th {
       border-top: 1px solid global.$color-GR;
     }
+
+    span {
+      @include global.mq(tb) {
+        height: 48px;
+        writing-mode: vertical-rl;
+      }
+    }
   }
 
   th:nth-child(1) {
+    position: sticky;
+    left: 0;
     width: 42px;
     color: global.$color-WT;
     background-color: global.$color-BK;
   }
 
   th:nth-child(2) {
+    position: sticky;
+    left: 42px;
+    box-sizing: border-box;
     width: 150px;
+    padding-right: 10px;
     color: global.$color-WT;
     text-align: left;
     background-color: global.$color-BK;
     box-shadow: 4px 0 4px rgba(black, 0.2);
+
+    @include global.mq(tb) {
+      width: 120px;
+    }
 
     a {
       display: flex;
@@ -67,4 +88,9 @@
       background-color: #ddd;
     }
   }
+}
+
+.table-wrapper {
+  margin-top: 28px;
+  overflow: auto;
 }
