--- a/src/sass/global/_mixin.scss
+++ b/src/sass/global/_mixin.scss
@@ -4,6 +4,7 @@ $breakpoints: (
   pc: "(min-width: 768px)",
   tb: "(min-width: 768px) and (max-width: 1023px)",
   mb: "(max-width: 899px)",
+  pc-large: "(min-width: 1100px)",
 );
 
 @mixin mq($breakpoint) {
