ヒーロータイトルにアニメーションを設定

--- a/src/sass/module/block/_hero.scss
+++ b/src/sass/module/block/_hero.scss
@@ -139,3 +139,25 @@
     opacity: 1;
   }
 }
+
+.title01,
+.title02,
+.title03 {
+  height: 1.3em;
+  overflow: hidden;
+
+  > span {
+    display: block;
+    animation: 1s title ease-in-out;
+  }
+}
+
+@keyframes title {
+  0% {
+    transform: translateY(1.3em);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
